Fix input field size and alignment on seed clipboard copy warning modal

--- a/app/style/Modals.less
+++ b/app/style/Modals.less
@@ -544,6 +544,15 @@
   text-transform: lowercase;
 }
 
+.confirm-seed-copy-modal-content .input-and-unit {
+  margin-left:32px;
+  padding-left:0;
+
+  > input {
+    width: 100%;
+  }
+}
+
 .confirm-seed-copy-warning-text {
   white-space: pre-line;
   margin-bottom: 20px;
